--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Number Guesser In React</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-  <h1>Luke, I am your father.</h1>
   <div id="application"></div>
   <script type="text/javascript" src="main.bundle.js"></script>
 </body>
