--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
-  <div id="application"></div>
+  <div id="application" />
   <script type="text/javascript" src="main.bundle.js"></script>
 </body>
 </html>
